# aptbrowsr

./: .gitignore  .gitmodules  Cargo.toml
backend/: .env  Cargo.toml
backend/src/: distros.rs  main.rs
common/src/: distro.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
storage/: Cargo.toml  database.db  diesel.toml
storage/migrations/2024-11-22-172121_create_distros/: down.sql  up.sql
storage/src/: distro.rs  error.rs  lib.rs  models.rs  schema.rs
