[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
diesel = { version = "2.2.5", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenvy = "0.15.7"
libapt = { path = "../libapt" }
serde = { version = "1.0.215", features = ["derive"] }
